tests/ui/diagnostic_namespace/on_unmatch_args/error_is_shown_in_downstream_crates.stderr
error: invalid arguments to pair macro invocation
  --> $DIR/error_is_shown_in_downstream_crates.rs:6:20
   |
LL |     other::pair!(u8);
   |                    ^ expected a type and value here
   |
note: while trying to match `,`
  --> $DIR/auxiliary/other.rs:11:12
   |
LL |     ($ty:ty, $value:expr) => {};
   |            ^
   = note: this macro expects a type and a value, like `pair!(u8, 0)`
   = note: see the macro documentation for accepted forms

error: aborting due to 1 previous error

